--- a/AjaxProject/WebContent/employeeList1.html
+++ b/AjaxProject/WebContent/employeeList1.html
@@ -13,7 +13,7 @@
 				var data = JSON.parse(result);  //오브젝트타입으로 가져오기
 				console.log(data);
 				document.write("<h2>사원목록</h2>");
-				<table>
+				//<table>
 				/* for (var i=0; i<data.length; i++) {
 					document.write("<p>"+data[i].id+" "+data[i].first_name+ " " +data[i].email+ " " +data[i].salary+"</p>");
 				} */
